--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</a>
 								</li>
 							</ul>
-							<a href="#" class="header__button button">
+							<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="header__button button">
 								<span>BUY NOW</span>
 							</a>
 						</nav>
@@ -96,7 +96,7 @@
 						</div>
 					</div>
 					<div class="hero__bottom">
-						<a href="#" class="hero__button button">
+						<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="hero__button button">
 							<span>
 								BUY NOW
 							</span>
@@ -105,7 +105,7 @@
 							<img class="ibg" src="img/hero/bulb.png" alt="Image">
 						</div>
 						<div class="hero__social social-block social-block--rotate">
-							<a href="https://x.com/Molt Pepe" aria-label="social X" target="_blank" class="social-block__link social-link">
+							<a href="https://x.com/moltpepeX" aria-label="social X" target="_blank" class="social-block__link social-link">
 								<span>
 									<svg viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<mask id="mask0_26_1157" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="49" height="49">
@@ -117,7 +117,7 @@
 									</svg>
 								</span>
 							</a>
-							<a href="https://t.me/Molt PepeBASE" target="_blank" aria-label="social telegram" class="social-block__link social-link">
+							<a href="https://t.me/moltpepechat" target="_blank" aria-label="social telegram" class="social-block__link social-link">
 								<span>
 									<svg viewBox="0 0 46 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M40.6506 0.967208C41.2066 0.733187 41.8152 0.652475 42.4129 0.733472C43.0107 0.814468 43.5759 1.05421 44.0496 1.42775C44.5233 1.80129 44.8882 2.29496 45.1064 2.85739C45.3245 3.41982 45.388 4.03045 45.2901 4.62571L40.187 35.579C39.692 38.5647 36.416 40.277 33.6778 38.7897C31.3873 37.5455 27.9853 35.6285 24.9253 33.6282C23.3953 32.627 18.7085 29.4207 19.2845 27.1392C19.7796 25.1885 27.6545 17.858 32.1545 13.4997C33.9208 11.7875 33.1153 10.7997 31.0296 12.3747C25.85 16.2852 17.534 22.232 14.7845 23.906C12.359 25.382 11.0945 25.634 9.58255 25.382C6.82405 24.923 4.2658 24.212 2.1778 23.3457C-0.643703 22.1757 -0.506453 18.2967 2.17555 17.1672L40.6506 0.967208Z" fill="#FDF9D4" />
@@ -164,7 +164,7 @@
 									<p>DON'T FUMBLE THE $MPEPE!</p>
 								</div>
 							</div>
-							<a href="#" class="content-about__button button">
+							<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="content-about__button button">
 								<span>
 									BUY NOW
 								</span>
@@ -545,7 +545,7 @@
 										JOIN US
 									</span>
 								</a>
-								<a href="#" target="_blank" class="bottom-whatt__button button button--black button--svg ">
+								<a href="https://dexscreener.com/base/0xcomingsoon" target="_blank" class="bottom-whatt__button button button--black button--svg ">
 									<span>
 										dexscreener
 										<svg viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -559,7 +559,7 @@
 										</svg>
 									</span>
 								</a>
-								<a href="https://t.me/Molt Pepe" target="_blank" class="bottom-whatt__button button button--blue button--svg ">
+								<a href="https://t.me/moltpepechat" target="_blank" class="bottom-whatt__button button button--blue button--svg ">
 									<span>
 										TELEGRAM
 										<svg viewBox="0 0 46 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -567,7 +567,7 @@
 										</svg>
 									</span>
 								</a>
-								<a href="https://x.com/Molt Pepe" target="_blank" class="bottom-whatt__button button button--black button--svg ">
+								<a href="https://x.com/moltpepeX" target="_blank" class="bottom-whatt__button button button--black button--svg ">
 									<span>
 										FOLLOW
 										<svg viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -635,7 +635,7 @@
 							</li>
 						</ul>
 						<div class="footer__social social-block ">
-							<a href="https://x.com/Molt Pepe" aria-label="social X" target="_blank" class="social-block__link social-link">
+							<a href="https://x.com/moltpepeX" aria-label="social X" target="_blank" class="social-block__link social-link">
 								<span>
 									<svg viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<mask id="mask0_26_1156" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="49" height="49">
@@ -647,7 +647,7 @@
 									</svg>
 								</span>
 							</a>
-							<a href="https://t.me/Molt PepeBASE" aria-label="social telegram" target="_blank" class="social-block__link social-link">
+							<a href="https://t.me/moltpepechat" aria-label="social telegram" target="_blank" class="social-block__link social-link">
 								<span>
 									<svg viewBox="0 0 46 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M40.6506 0.967208C41.2066 0.733187 41.8152 0.652475 42.4129 0.733472C43.0107 0.814468 43.5759 1.05421 44.0496 1.42775C44.5233 1.80129 44.8882 2.29496 45.1064 2.85739C45.3245 3.41982 45.388 4.03045 45.2901 4.62571L40.187 35.579C39.692 38.5647 36.416 40.277 33.6778 38.7897C31.3873 37.5455 27.9853 35.6285 24.9253 33.6282C23.3953 32.627 18.7085 29.4207 19.2845 27.1392C19.7796 25.1885 27.6545 17.858 32.1545 13.4997C33.9208 11.7875 33.1153 10.7997 31.0296 12.3747C25.85 16.2852 17.534 22.232 14.7845 23.906C12.359 25.382 11.0945 25.634 9.58255 25.382C6.82405 24.923 4.2658 24.212 2.1778 23.3457C-0.643703 22.1757 -0.506453 18.2967 2.17555 17.1672L40.6506 0.967208Z" fill="#FDF9D4" />
