--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</a>
 								</li>
 							</ul>
-							<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="header__button button">
+							<a href="https://app.uniswap.org/explore/pools/base/0xf8552c49eeed45ab6414bceab0f47933b08cdb07" class="header__button button">
 								<span>BUY NOW</span>
 							</a>
 						</nav>
@@ -96,7 +96,7 @@
 						</div>
 					</div>
 					<div class="hero__bottom">
-						<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="hero__button button">
+						<a href="https://app.uniswap.org/explore/pools/base/0xf8552c49eeed45ab6414bceab0f47933b08cdb07" class="hero__button button">
 							<span>
 								BUY NOW
 							</span>
@@ -164,7 +164,7 @@
 									<p>DON'T FUMBLE THE $MPEPE!</p>
 								</div>
 							</div>
-							<a href="https://app.uniswap.org/explore/pools/base/0xcomingsoon" class="content-about__button button">
+							<a href="https://app.uniswap.org/explore/pools/base/0xf8552c49eeed45ab6414bceab0f47933b08cdb07" class="content-about__button button">
 								<span>
 									BUY NOW
 								</span>
@@ -439,7 +439,7 @@
 							<div class="card-tokenomiks__cn">
 								<div data-clipboard class="cn">
 									<span data-clipboardEl class="cn__address">
-										0xcomingsoon
+										0xf8552c49eeed45ab6414bceab0f47933b08cdb07
 									</span>
 									<button type="button" data-clipboardBtn aria-label="copy text" class="cn__button">
 										<svg viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -545,7 +545,7 @@
 										JOIN US
 									</span>
 								</a>
-								<a href="https://dexscreener.com/base/0xcomingsoon" target="_blank" class="bottom-whatt__button button button--black button--svg ">
+								<a href="https://dexscreener.com/base/0xf8552c49eeed45ab6414bceab0f47933b08cdb07" target="_blank" class="bottom-whatt__button button button--black button--svg ">
 									<span>
 										dexscreener
 										<svg viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
